--- a/src/components/AirdropMachine/components/Redeem/components/NFTAirdrop/index.scss
+++ b/src/components/AirdropMachine/components/Redeem/components/NFTAirdrop/index.scss
@@ -13,6 +13,7 @@
     .nft-airdrop__feature {
       display: flex;
       align-items: center;
+      margin: 5px 0;
       img {
         margin-right: 10px;
       }
