--- a/src/components/AirdropMachine/components/Redeem/components/TokenEligibility/index.scss
+++ b/src/components/AirdropMachine/components/Redeem/components/TokenEligibility/index.scss
@@ -35,7 +35,7 @@
         }
       }
       .token-eligibility__breakdown_element-value {
-
+        white-space: nowrap;
       }
       &.total {
         border-top: 1px solid $gray;
