--- a/src/components/Shared/Modal/index.scss
+++ b/src/components/Shared/Modal/index.scss
@@ -27,6 +27,7 @@
     position: relative;
     margin: 1.75rem auto;
     border-radius: 3px;
+    overflow: scroll;
     .modal-header {
       display: flex;
       justify-content: flex-end;
